tests/ui/closures/closure_no_cap_coerce_many_unsafe_0.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/closure_no_cap_coerce_many_unsafe_0.rs:12:23
   |
LL |     let result: i32 = foo(5, 5);
   |                       ^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/closure_no_cap_coerce_many_unsafe_0.rs:21:23
   |
LL |     let result: i32 = foo(5, 5);
   |                       ^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
